# acme-fucks

./: .travis.yml  README.md  TAGS  acme-fucks.cabal
src/: Fucks.hs
src/Acme/: Fucks.hs
src/Data/Monoid/: Fucks.hs
