name:                acme-fucks
version:             0.1.0.1
synopsis:            
description:         Provides the Fucks Monoid
homepage:            https://github.com/Akii/acme-fucks#readme
license:             WTFPL
license-file:        LICENSE
author:              Akii
copyright:           2016 Akii
category:            Library
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Acme.Fucks
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Akii/acme-fucks
